crates/math-core/src/snapshots/math_core__parser__tests__phantom_full.snap
---
source: crates/math-core/src/parser.rs
expression: "\\phantom{a}"
---
[
  Phantom(
    node: IdentifierChar("a", Default),
  ),
]
