crates/math-core/src/snapshots/math_core__parser__tests__pmod_subscript.snap
---
source: crates/math-core/src/parser.rs
expression: "\\pmod{3}_4"
---
[
  Space(Length(
    value: 0.44444445,
    unit: Em,
  )),
  Operator(
    op: "(",
    attrs: OpAttrs("STRETCHY_FALSE"),
    roles: OpRoles("ROLE_OPEN"),
    size: None,
    left: None,
    right: None,
  ),
  IdentifierStr("mod"),
  Space(Length(
    value: 0.33333334,
    unit: Em,
  )),
  Number("3"),
  Sub(
    target: Operator(
      op: ")",
      attrs: OpAttrs("STRETCHY_FALSE"),
      roles: OpRoles("ROLE_CLOSE"),
      size: None,
      left: None,
      right: None,
    ),
    symbol: Number("4"),
  ),
]
