crates/math-core/src/snapshots/math_core__parser__tests__scriptstyle_without_braces.snap
---
source: crates/math-core/src/parser.rs
expression: "x\\scriptstyle y"
---
[
  IdentifierChar("x", Default),
  Row(
    nodes: [
      IdentifierChar("y", Default),
    ],
    attrs: RowAttrs(
      color: None,
      style: Some(Script),
      math_shift_compact: false,
      margin_left: None,
    ),
  ),
]
