crates/math-core/src/snapshots/math_core__parser__tests__slightly_more_complex_fraction.snap
---
source: crates/math-core/src/parser.rs
expression: "\\frac123"
---
[
  Frac(
    num: Number("1"),
    denom: Number("2"),
    lt_value: NaN,
    lt_unit: Rem,
    attr: None,
  ),
  Number("3"),
]
