crates/math-core/src/snapshots/math_core__parser__tests__sout.snap
---
source: crates/math-core/src/parser.rs
expression: "\\sout{abc}"
---
[
  Enclose(
    content: Row(
      nodes: [
        IdentifierChar('a', Default),
        IdentifierChar('b', Default),
        IdentifierChar('c', Default),
      ],
      attr: None,
    ),
    notation: Notation("HORIZONTAL"),
  ),
]
