crates/math-core/src/snapshots/math_core__parser__tests__sqrt_degree_and_number.snap
---
source: crates/math-core/src/parser.rs
expression: "\\sqrt[3]21"
---
[
  Root(Number("3"), Number("2")),
  Number("1"),
]
