crates/math-core/src/snapshots/math_core__parser__tests__sqrt_number_with_dot.snap
---
source: crates/math-core/src/parser.rs
expression: "\\sqrt{4.}"
---
[
  Sqrt(Row(
    nodes: [
      Number("4"),
      IdentifierChar(".", Default),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
      margin_left: None,
    ),
  )),
]
