crates/math-core/src/snapshots/math_core__parser__tests__sqrt_subscript.snap
---
source: crates/math-core/src/parser.rs
expression: "\\sqrt x_i"
---
[
  Sub(
    target: Sqrt(IdentifierChar("x", Default)),
    symbol: IdentifierChar("i", Default),
  ),
]
