crates/math-core/src/snapshots/math_core__parser__tests__sqrt_subscript_and_degree.snap
---
source: crates/math-core/src/parser.rs
expression: "\\sqrt[3] x_i"
---
[
  Sub(
    target: Root(Number("3"), IdentifierChar("x", Default)),
    symbol: IdentifierChar("i", Default),
  ),
]
