crates/math-core/src/snapshots/math_core__parser__tests__sub_big_paren.snap
---
source: crates/math-core/src/parser.rs
expression: "x_\\big("
---
[
  Sub(
    target: IdentifierChar("x", Default),
    symbol: Operator(
      op: "(",
      attrs: OpAttrs(""),
      roles: OpRoles("ROLE_INFIX"),
      size: Some(Scale1),
      left: None,
      right: None,
    ),
  ),
]
