crates/math-core/src/snapshots/math_core__parser__tests__sub_number.snap
---
source: crates/math-core/src/parser.rs
expression: x_123
---
[
  Sub(
    target: IdentifierChar("x", Default),
    symbol: Number("1"),
  ),
  Number("23"),
]
